cmake_minimum_required(VERSION 3.1)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
project(CodeUp C)

set(CMAKE_C_STANDARD 99)

add_executable(1001 1001.c)
add_executable(1002 1002.c)
add_executable(1003 1003.c)
add_executable(1004 1004.c)
add_executable(1005 1005.c)
add_executable(1006 1006.c)
add_executable(1007 1007.c)
add_executable(1008 1008.c)
add_executable(1010 1010.c)
add_executable(1011 1011.c)
add_executable(1012 1012.c)
add_executable(1013 1013.c)
add_executable(1014 1014.c)
add_executable(1015 1015.c)
add_executable(1017 1017.c)
add_executable(1018 1018.c)
add_executable(1019 1019.c)
add_executable(1020 1020.c)
add_executable(1021 1021.c)
add_executable(1022 1022.c)
add_executable(1023 1023.c)
add_executable(1024 1024.c)
add_executable(1025 1025.c)
add_executable(1026 1026.c)
add_executable(1027 1027.c)
add_executable(1028 1028.c)
add_executable(1029 1029.c)
add_executable(1030 1030.c)
add_executable(1040 1040.c)
add_executable(1041 1041.c)
add_executable(1042 1042.c)
add_executable(1043 1043.c)
add_executable(1044 1044.c)
add_executable(1045 1045.c)
add_executable(1046 1046.c)
add_executable(1047 1047.c)
add_executable(1048 1048.c)
add_executable(1049 1049.c)
add_executable(1050 1050.c)
add_executable(1051 1051.c)
add_executable(1052 1052.c)
add_executable(1053 1053.c)
add_executable(1054 1054.c)
add_executable(1055 1055.c)
add_executable(1056 1056.c)
add_executable(1057 1057.c)
add_executable(1058 1058.c)
add_executable(1059 1059.c)
add_executable(1060 1060.c)
add_executable(1061 1061.c)
add_executable(1062 1062.c)
add_executable(1063 1063.c)
add_executable(1064 1064.c)
add_executable(1115 1115.c)
add_executable(1118 1118.c)
add_executable(1125 1125.c)
add_executable(1143 1143.c)
add_executable(1144 1144.c)
add_executable(1147 1147.c)
add_executable(1148 1148.c)
